--- a/front/src/index.html
+++ b/front/src/index.html
@@ -5,7 +5,7 @@
   <title>Webcoholic</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdn-icons.flaticon.com/png/512/2474/premium/2474413.png?token=exp=1650906197~hmac=b57f043139f395edc285803134720e82 " rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
